--- a/doc/_data/tutorials.yml
+++ b/doc/_data/tutorials.yml
@@ -7,6 +7,9 @@
       id: installation-guide
       title: Installation guide
     -
+      id: configuration
+      title: Configuring mc_rtc
+    -
       id: running-a-controller
       title: Running a controller
     -
@@ -27,14 +30,11 @@
   desc: The following tutorials cover broad topics concerning the framework that are not specifically related to a controller's implementation
   tutorials:
     -
-      id: configuration
-      title: Configuration of mc_rtc
-    -
       id: mc_rtc_configuration
       title: mc_rtc::Configuration general purpose configuration
     -
       id: logging
-      title: Logging data and visualizing it
+      title: Logging data
     -
       id: gui
       title: Graphical User Interface (GUI)
@@ -44,6 +44,19 @@
     -
       id: ros
       title: ROS integration
+-
+  id: tools
+  title: Framework tools
+  desc: These tutorials introduce useful tools developed around mc_rtc
+  tutorials:
+    - id: mc_log_ui_and_mc_log_visualization
+      title: Log plotting and replay visualization
+    -
+      id: mc_surfaces_visualization
+      title: Visualizing surfaces
+    -
+      id: mc_convex_visualization
+      title: Visualizing convexes
 -
   id: recipes
   title: Control recipes
