[doc] Add page about mc_rtc::Configuration

--- a/doc/_data/tutorials.yml
+++ b/doc/_data/tutorials.yml
@@ -31,7 +31,7 @@
   tutorials:
     -
       id: mc_rtc_configuration
-      title: mc_rtc::Configuration general purpose configuration
+      title: <code>mc_rtc::Configuration</code> general purpose configuration
     -
       id: logging
       title: Logging data
