[doc] Add tutorial about the FSM

--- a/doc/_data/tutorials.yml
+++ b/doc/_data/tutorials.yml
@@ -76,6 +76,9 @@
       id: fsm-example
       title: FSM controller in practice
     -
+      id: derived-fsm
+      title: Deriving the FSM controller
+    -
       id: observers
       title: Using the observers pipeline
     -
