--- a/doc/Doxyfile.extra.in
+++ b/doc/Doxyfile.extra.in
@@ -1,3 +1,5 @@
-INPUT                  = @CMAKE_SOURCE_DIR@/include
-IMAGE_PATH             = @CMAKE_SOURCE_DIR@/doc/pictures
+INPUT                  = @PROJECT_SOURCE_DIR@/include @PROJECT_SOURCE_DIR@/README.md
+USE_MDFILE_AS_MAINPAGE = @PROJECT_SOURCE_DIR@/README.md
+IMAGE_PATH             = @PROJECT_SOURCE_DIR@/doc/pictures
 FILE_PATTERNS          = *.h *.idl
+INTERACTIVE_SVG = YES
