--- a/doc/_data/robots.yml
+++ b/doc/_data/robots.yml
@@ -1,20 +1,25 @@
-- name: "HRP-2-Kai"
-  icon: "hrp2.png"
+- name: HRP-2-Kai
+  icon: hrp2.png
   pkg:
-    desc: "https://gite.lirmm.fr/mc-hrp2/hrp2_drc"
-    module: "https://gite.lirmm.fr/mc-hrp2/mc-hrp2"
-- name: "HRP-4-LIRMM"
-  icon: "hrp4.png"
+    desc: https://gite.lirmm.fr/mc-hrp2/hrp2_drc
+    module: https://gite.lirmm.fr/mc-hrp2/mc-hrp2
+- name: HRP-4-LIRMM
+  icon: hrp4.png
   pkg:
-    desc: "https://gite.lirmm.fr/mc-hrp4/hrp4"
-    module: "https://gite.lirmm.fr/mc-hrp4/mc-hrp4"
-- name: "HRP-4J"
-  icon: "hrp4.png"
+    desc: https://gite.lirmm.fr/mc-hrp4/hrp4
+    module: https://gite.lirmm.fr/mc-hrp4/mc-hrp4
+- name: HRP-4J
+  icon: hrp4.png
   pkg:
-    desc: "https://gite.lirmm.fr/mc-hrp4/hrp4j_description"
-    module: "https://gite.lirmm.fr/mc-hrp4/mc_hrp4j"
-- name: "Nao"
-  icon: "nao.jpg"
+    desc: https://gite.lirmm.fr/mc-hrp4/hrp4j_description
+    module: https://gite.lirmm.fr/mc-hrp4/mc_hrp4j
+- name: Nao
+  icon: nao.jpg
   pkg:
-    desc: "https://gite.lirmm.fr/atanguy/nao_description"
-    module: "https://gite.lirmm.fr/atanguy/mc_nao"
+    desc: https://gite.lirmm.fr/softbankrobotics/nao_description
+    module: https://gite.lirmm.fr/multi-contact/mc_nao
+- name: Pepper
+  icon: pepper.jpg
+  pkg:
+    desc: https://gite.lirmm.fr/softbankrobotics/pepper_description
+    module: https://gite.lirmm.fr/multi-contact/mc_pepper
