--- a/doc/_data/tutorials.yml
+++ b/doc/_data/tutorials.yml
@@ -114,5 +114,5 @@
       id: new-environment
       title: Environment creation for mc_rtc
     -
-      id: new-robot-module
-      title: Implement a new robot module
+      id: new-robot
+      title: Integrate a new robot in mc_rtc
