--- a/doc/_data/nav.yml
+++ b/doc/_data/nav.yml
@@ -1,14 +1,10 @@
-- name: "Overview"
-  page: "index.html"
-  id: "overviewDropdown"
-  items:
-    - name: "Interfaces"
-      page: "interfaces.html"
-    - name: "Robots"
-      page: "robots.html"
+- name: "Interfaces"
+  page: "interfaces.html"
+- name: "Robots"
+  page: "robots.html"
 - name: "Tutorials"
   page: "tutorials.html"
-- name: "Doxygen"
+- name: "API documentation"
   page: "doxygen.html"
 - name: "JSON/YAML documentation"
   page: "json.html"
