[stabilizer] Import all stabilizer code (compiles but untested)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -292,6 +292,7 @@ mc_tasks/LookAtTask.cpp
 mc_tasks/LookAtSurfaceTask.cpp
 mc_tasks/MetaTaskLoader.cpp
 mc_tasks/stabilizer/LIPMStabilizerTask.cpp
+mc_tasks/stabilizer/Pendulum.cpp
 )
 
 set(mc_tasks_HDR
