[doc] Add tutorial about live plotting

--- a/doc/_data/tutorials.yml
+++ b/doc/_data/tutorials.yml
@@ -42,6 +42,9 @@
       id: gui
       title: Graphical User Interface (GUI)
     -
+      id: live-plotting
+      title: Display plots live from the controller
+    -
       id: ros
       title: ROS integration
 -
