--- a/etc/mc_rtc.yaml
+++ b/etc/mc_rtc.yaml
@@ -70,7 +70,7 @@ GUIServer:
   # IPC (inter-process communication) section, if the section is absent
   # this disables the protocol, if the section is empty it is configured
   # to its default settings.
-  IPC:
+  IPC: {}
     # If the GUI server IPC protocol is enabled, this is used as a base
     # to create the sockets, the actual sockets name will be formed by
     # adding _sub.ipc and _rep.ipc to the provided path. The file will
@@ -83,7 +83,7 @@ GUIServer:
     # Binding ports, the first is used for PUB socket and the second for
     # the PULL socket
     Ports: [4242, 4343]
-  # WS (websocket) section, the same remarks apply as IPC
+  # # WS (websocket) section, the same remarks apply as IPC
   # WS:
   #   # Binding host, * binds to all interfaces
   #   Host: "*"
@@ -97,7 +97,7 @@ VerboseLoader: false
 
 # The following option is used to disable controller/robot creation sandboxing
 # This option only affects Linux
-UseSandbox: true
+# UseSandbox: true
 
 # The following options are used to control the location of the
 # controllers', robots' and observers' modules (libraries)
