--- a/etc/mc_rtc.yaml
+++ b/etc/mc_rtc.yaml
@@ -1,7 +1,7 @@
 ---
 # What robot is being controlled
 MainRobot: JVRC1
-#Enabled : [Posture, Body6d, CoM, Seq, Driving, Egress, EgressMRQP, BCISelfInteract]
+# Enabled controllers
 Enabled: [CoM]
 
 # Load and run state observers.
