[ci] Fix pages job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -126,7 +126,7 @@ pages:
     - mkdir -p /usr/share/doc/sch-core/doxygen-html && cd /usr/share/doc/sch-core/doxygen-html && wget https://jrl-umi3218.github.io/sch-core/doxygen/HEAD/sch-core.doxytag
     - mkdir -p /usr/share/doc/mc_rbdyn_urdf/doxygen-html && cd /usr/share/doc/mc_rbdyn_urdf/doxygen-html && wget https://jrl-umi3218.github.io/mc_rbdyn_urdf/doxygen/HEAD/mc_rbdyn_urdf.doxytag
     - mkdir -p /tmp/_ci/src
-    - cd /tmp/_ci/src && git clone --recursive https://github.com/humanoid-path-planner/hpp-spline#v4.7.0 && mkdir -p hpp-spline/build && cd hpp-spline/build && cmake ../ -DCMAKE_BUILD_TYPE=RelWithDebInfo -DBUILD_TESTING:BOOL=OFF -DBUILD_PYTHON_INTERFACE:BOOL=OFF && make install || exit 1
+    - cd /tmp/_ci/src && git clone --recursive https://github.com/humanoid-path-planner/hpp-spline && mkdir -p hpp-spline/build && cd hpp-spline/build && cmake ../ -DCMAKE_BUILD_TYPE=RelWithDebInfo -DBUILD_TESTING:BOOL=OFF -DBUILD_PYTHON_INTERFACE:BOOL=OFF && make install || exit 1
     - cd /tmp/_ci/src && git clone --recursive git@gite.lirmm.fr:multi-contact/mc_rtc_ros_data && mkdir -p mc_rtc_ros_data/build && cd mc_rtc_ros_data/build && cmake ../ -DCMAKE_BUILD_TYPE=RelWithDebInfo -DBUILD_TESTING:BOOL=OFF && make install || exit 1
     - mkdir -p /tmp/_ci/build && cd /tmp/_ci/build
     - cmake $CI_PROJECT_DIR -DPYTHON_BINDING=OFF -DBUILD_TESTING=OFF
