[mc_robots] Generate aliases for env and object

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,6 +110,7 @@ macro(find_description_package PACKAGE)
 endmacro()
 
 find_description_package(mc_env_description)
+find_description_package(mc_int_obj_description)
 
 set(MC_ROBOTS_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX}/lib/mc_robots)
 set(MC_OBSERVERS_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX}/lib/mc_observers)
