[doc] Give each renderer tag a unique class name

--- a/doc/_plugins/doxygen.rb.in
+++ b/doc/_plugins/doxygen.rb.in
@@ -18,7 +18,7 @@ def get_page(struct)
 end
 
 module Jekyll
-  class RenderTimeTag < Liquid::Tag
+  class DoxygenTag < Liquid::Tag
 
     def initialize(tag_name, text, tokens)
       super
@@ -36,4 +36,4 @@ module Jekyll
   end
 end
 
-Liquid::Template.register_tag('doxygen', Jekyll::RenderTimeTag)
+Liquid::Template.register_tag('doxygen', Jekyll::DoxygenTag)
