--- a/tests/controllers/mc_rtc.conf.in
+++ b/tests/controllers/mc_rtc.conf.in
@@ -24,5 +24,6 @@
   "ClearRobotModulePath" : true,
   "RobotModulePaths" : ["@ROBOT_MODULE_PATH@"],
   "ClearObserverModulePath": true,
-  "ObserverModulePaths": ["@OBSERVER_MODULE_PATH@"]
+  "ObserverModulePaths": ["@OBSERVER_MODULE_PATH@"],
+  "ClearGlobalPluginPath": true
 }
