--- a/include/mc_rtc/config.h.cmake.in
+++ b/include/mc_rtc/config.h.cmake.in
@@ -16,6 +16,7 @@ constexpr auto INSTALL_PREFIX = "${CMAKE_INSTALL_PREFIX}/";
 constexpr auto MC_ROBOTS_INSTALL_PREFIX = "${MC_ROBOTS_INSTALL_PREFIX}/";
 constexpr auto MC_OBSERVERS_INSTALL_PREFIX = "${MC_OBSERVERS_INSTALL_PREFIX}/";
 constexpr auto MC_CONTROLLER_INSTALL_PREFIX = "${MC_CONTROLLER_INSTALL_PREFIX}/";
+constexpr auto MC_PLUGINS_INSTALL_PREFIX = "${MC_PLUGINS_INSTALL_PREFIX}";
 constexpr auto DATA_PATH = "${CMAKE_INSTALL_PREFIX}/share/mc_rtc/";
 constexpr auto CONF_PATH = "${CMAKE_INSTALL_PREFIX}/etc/mc_rtc.yaml";
 
