[plugins] Add ROS plugin
Takes care of publishing instead of MCGlobalController

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,6 +128,7 @@ endif(MSVC)
 add_subdirectory(CMakeModules)
 add_subdirectory(doc)
 add_subdirectory(src)
+add_subdirectory(plugins)
 if(${BUILD_TESTING})
   add_subdirectory(tests)
 endif()
