[plugin/ROS] Move everything ROS-related into the ROS plugin
For now it's build inside mc_rtc source tree but should build as an
independent project as well.

However, in that later case, it's lacking a mechanism to make the plugin
directly available when finding mc_rtc.

Consumers need to explictly link to mc_rtc::mc_rtc_ros or
mc_rtc::mc_tasks_ros if they used the functionalities in those libraries
but only linked with e.g. mc_rtc::mc_control

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ endif()
 
 set(PROJECT_NAME mc_rtc)
 set(PROJECT_DESCRIPTION mc_rtc)
+set(PROJECT_VERSION 1.0.0)
 set(PROJECT_URL https://gite.lirmm.fr/multi-contact/mc_rtc)
 set(PROJECT_DEBUG_POSTFIX "_d")
 set(PROJECT_USE_KEYWORD_LINK_LIBRARIES TRUE)
@@ -85,13 +86,6 @@ add_library(mc_rtc_3rd_party::RapidJSON INTERFACE IMPORTED)
 set_target_properties(mc_rtc_3rd_party::RapidJSON PROPERTIES
   INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}/3rd-party/RapidJSON
 )
-
-# ROS (defines target: mc_rtc_3rd_party::ROS)
-if(NOT ${DISABLE_ROS})
-  find_package(mc_rtc_3rd_party_ros REQUIRED)
-else()
-  set(ROSCPP_FOUND False)
-endif()
 
 macro(find_description_package PACKAGE)
   set(PACKAGE_PATH_VAR "${PACKAGE}_PATH")
