--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -2,21 +2,17 @@
 # Copyright 2015-2019 CNRS-UM LIRMM, CNRS-AIST JRL, BIT
 #
 
-macro(add_plugin plugin)
-  set(plugin_SRC ${plugin}/${plugin}.cpp)
-  set(plugin_HDR ${plugin}/${plugin}.h)
+macro(add_plugin plugin plugin_SRC plugin_HDR)
   add_library(${plugin} SHARED ${plugin_SRC} ${plugin_HDR})
-  set_target_properties(${plugin} PROPERTIES FOLDER plugins)
   set_target_properties(${plugin} PROPERTIES PREFIX "")
-  target_link_libraries(${plugin} mc_control)
+  target_link_libraries(${plugin} PUBLIC mc_rtc::mc_control)
   install(TARGETS ${plugin} DESTINATION ${MC_PLUGINS_INSTALL_PREFIX})
-  set(plugin_CFG "${CMAKE_CURRENT_SOURCE_DIR}/${plugin}/etc/${plugin}.yaml")
-  if(EXISTS ${plugin_CFG})
-    install(FILES ${plugin_CFG} DESTINATION ${MC_PLUGINS_INSTALL_PREFIX}/etc)
-  else()
-  endif()
 endmacro()
 
-if(NOT ${DISABLE_ROS} AND ${ROSCPP_FOUND})
-  add_plugin(ROS)
-endif()
+file(GLOB plugin_dirs "*")
+foreach(plugin_dir ${plugin_dirs})
+  if(EXISTS ${plugin_dir}/CMakeLists.txt)
+    add_subdirectory(${plugin_dir})
+  endif()
+endforeach()
+set(PACKAGE_EXTRA_MACROS "${PACKAGE_EXTRA_MACROS}" PARENT_SCOPE)
