--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -3,10 +3,16 @@
 #
 
 macro(add_plugin plugin plugin_SRC plugin_HDR)
+  option(AUTOLOAD_${plugin}_PLUGIN "Automatically load ${plugin} plugin" ON)
   add_library(${plugin} SHARED ${plugin_SRC} ${plugin_HDR})
   set_target_properties(${plugin} PROPERTIES PREFIX "")
   target_link_libraries(${plugin} PUBLIC mc_rtc::mc_control)
   install(TARGETS ${plugin} DESTINATION ${MC_PLUGINS_INSTALL_PREFIX})
+  file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/autoload/${plugin}.yaml" "${plugin}")
+  if(AUTOLOAD_${plugin}_PLUGIN)
+    install(FILES "${CMAKE_CURRENT_BINARY_DIR}/autoload/${plugin}.yaml"
+      DESTINATION "${MC_PLUGINS_INSTALL_PREFIX}/autoload/")
+  endif()
 endmacro()
 
 function(check_as_needed_linker_flag)
